<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="338dp"
        android:layout_height="201dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioComputerScience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_comsci" />

        <RadioButton
            android:id="@+id/radioSoftware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_SoftwareInfo" />

        <RadioButton
            android:id="@+id/radioBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_bio" />

        <RadioButton
            android:id="@+id/radioData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_DataSci" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="80dp"
        android:text="@string/button_Cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/depButtonSelect"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/button_Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>